# openrsp

./: .gitignore  .gitmodules  .travis.yml  .zenodo.json  AUTHORS  AUTHORS.rst  AUTHOR_STATUS_AND_DECISION_PROCESS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.rst  INSTALL  MANIFEST.in  NEWS  NEWS.rst  PKG-INFO  PKG-INFO.yml  README  README.rst  RULES  STYLE_GUIDE.md  TODO  TODO.rst  birefring.f90  matrix_defop.f90  matrix_defop_ng.f90  matrix_genop.f90  matrix_genop_ng.f90  openrsp.bib  prop_contribs.f90  prop_test.f90  prop_test_ng.f90  rsp_contribs_ng.f90  rsp_equations.f90  rsp_equations_ng.f90  runtest  setup.cfg  setup.py  to_compile  (+1 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
cmake/: Chunks.cmake  ConfigCompilerFlags.cmake  ConfigDocumentation.cmake  ConfigExternal.cmake  ConfigParentSettings.cmake  DeveloperManual.cmake  Directories.cmake  Documentation.cmake  FortranAPI.cmake  OpenRSPTestData.cmake  Options.cmake  Sources.cmake  TestSuiteC.cmake  TestSuiteFortran.cmake  WEBFiles.cmake  cmake_copy_latex.cmake.in  cmake_make_dirs.cmake.in  cmake_uninstall.cmake.in
cmake/compilers/: CFlags.cmake  FortranFlags.cmake
cmake/custom/: user_context.cmake
doc/: add_openrsp_to_host_program.rst  authors.rst  challenges_XCint.rst  change_log.rst  changelog.rst  citations.rst  coding_standards.rst  compilation.rst  conf.py  copying.rst  developing_xcint.rst  equations.rst  get_involved_development.rst  getting_running_openrsp.rst  history.rst  index.rst  install.rst  interfaces.rst  interfaces_XCint.rst  introduction.rst  issues.rst  keywords.rst  list_of_docs_taken_out  modularization.rst  papers_openrsp_all.rst  papers_openrsp_calcs.rst  papers_openrsp_theory.rst  programs_with_openrsp.rst  publications.rst  sphinx.rst  testing.rst  theoretical_background.rst  what_is_openrsp.rst
doc/_static/: openrsp_fortran_api.tex  openrsp_framework.tex
doc/_templates/: layout.html
doc/developer/: background_and_rationale.rst  files_and_directories.rst  openrsp_design.rst  pseudocode.rst  rules.rst
doc/latex/: chap_framework.tex  manual.tex  refs.bib
doc/manual/: Makefile  api_reference.rst  callback_functions.rst  compile_openrsp.rst  conf.py  future_plans.rst  index.rst  installation.rst  limitations.rst  make.bat  notations_and_conventions.rst  openrsp_api.rst  openrsp_callback.rst  openrsp_developers.rst  openrsp_files.rst  openrsp_installation.rst  openrsp_introduction.rst  openrsp_limitation.rst  sphinx.rst  unit_testing.rst
doc/source/: conf.py  index.rst  openrsp_api.rst  openrsp_callback.rst  openrsp_definition.rst  openrsp_developers.rst  openrsp_files.rst  openrsp_installation.rst  openrsp_introduction.rst  openrsp_limitation.rst
doc/tutorial/: Makefile  background.rst  conf.py  context.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  make.bat  nuc_contrib.rst  one_elec_oper.rst  one_oper.rst  openrsp_context.rst  openrsp_examples.rst  openrsp_installation.rst  openrsp_introduction.rst  openrsp_nuc_contrib.rst  openrsp_one_oper.rst  openrsp_overlap.rst  openrsp_perturbation.rst  openrsp_residue.rst  openrsp_rsp_fun.rst  openrsp_solver.rst  openrsp_two_oper.rst  openrsp_xc_fun.rst  overlap.rst  overlap_operator.rst  perturbations.rst  residues.rst  response_functions.rst  response_solver.rst  solver.rst  two_elec_oper.rst  two_oper.rst  xc_fun.rst  zero_elec_oper.rst
general-test/: quartic_ff_routine.f90  rsp_equations_test.f90
general-test/general_reorg_dev/: rsp_field_tuple.f90  rsp_general.f90  (+5 more)
include/: 2gbdef.h  FSYMdef.h  OpenRSP.h  OpenRSPAODensCallback.h  OpenRSPAODensTest.h  OpenRSPDMatCallback.h  OpenRSPDMatTest.h  OpenRSPDensAOCallback.h  OpenRSPDensAOTest.h  OpenRSPNucHamiltonCallback.h  OpenRSPPertCallback.h  OpenRSPTest.h  OpenRSPTestPerturbations.h  OpenRSPZeroOperCallback.h  RSPNucHamilton.h  RSPOneOper.h  RSPOverlap.h  RSPPerturbation.h  RSPSolver.h  RSPTwoOper.h  RSPXCFun.h  RSPZeroOper.h  Regge.h  aatens.h  abainf.h  abares.h  absorp.h  ader.h  anrinf.h  aobtch.h  aosotr.h  aovec.h  asymb.h  blocks.h  cbdax.h  cbdtra.h  cbespn.h  cbgetdis.h  cbiaat.h  cbicc2.h  (+386 more)
maintenance/: commit_email_recipients
src/: OpenRSP.c  OpenRSPAddOneOper.c  OpenRSPAddTwoOper.c  OpenRSPAddXCFun.c  OpenRSPAssemble.c  OpenRSPCreate.c  OpenRSPDestroy.c  OpenRSPGetRSPFun.c  OpenRSPGetResidue.c  OpenRSPSetAtoms.c  OpenRSPSetDipoleOrigin.c  OpenRSPSetElecEOM.c  OpenRSPSetGaugeOrigin.c  OpenRSPSetLinearRSPSolver.c  OpenRSPSetNucContributions.c  OpenRSPSetNucFun.c  OpenRSPSetNucGeoPerturbations.c  OpenRSPSetNucHamilton.c  OpenRSPSetNucScalarPotential.c  OpenRSPSetNucVectorPotential.c  OpenRSPSetOverlap.c  OpenRSPSetPDBS.c  OpenRSPSetPerturbations.c  OpenRSPSetSolver.c  OpenRSPSetWaveFunction.c  OpenRSPWrite.c  RSPNucHamilton.c  RSPNucHamiltonAssemble.c  RSPNucHamiltonCreate.c  RSPNucHamiltonDestroy.c  RSPNucHamiltonGetContributions.c  RSPNucHamiltonGetNumAtoms.c  RSPNucHamiltonWrite.c  RSPOneOper.c  RSPOneOperAdd.c  RSPOneOperAssemble.c  RSPOneOperCreate.c  RSPOneOperDestroy.c  RSPOneOperGetExp.c  RSPOneOperGetMat.c  (+96 more)
test/: .gitignore  C2H4_pol_test.f90  README.rst  beholder.py  beholder_openrsp.py  list_of_tests  openrsp.py  quartic_ff_routine.f90  runtest.py  runtest_dalton.py  runtest_openrsp.py
tests/: OpenRSPAODensCallback.c  OpenRSPAODensTest.c  OpenRSPDMatCallback.c  OpenRSPDMatTest.c  OpenRSPDensAOCallback.c  OpenRSPDensAOTest.c  OpenRSPNucHamiltonCallback.c  OpenRSPPertCallback.c  OpenRSPTest.c  OpenRSPTestData.c  OpenRSPTestPerturbations.c  OpenRSPZeroOperCallback.c
web/: Analysis.tex  CMakeLists.txt  ChapterWeaved.tex  Copyright.tex  FortranAPIs.nw  Implementation.nw  Introduction.nw  Maintenance.tex  OpenRSPDeveloper.tex  OpenRSPFortranAPI.nw  OpenRSPNucHamilton.nw  OpenRSPOverlap.nw  OpenRSPPerturbation.nw  OpenRSPSolver.nw  OpenRSPXCFun.nw  Preface.tex  RSPNucHamilton.nw  RSPOneOper.nw  RSPOverlap.nw  RSPPerturbation.nw  RSPSolver.nw  RSPTwoOper.nw  RSPWaveFunction.nw  RSPXCFun.nw  RSPZeroOper.nw  Residues.nw  ResponseFunctions.nw  Settings.tex  UnitTesting.nw  references.bib
(+783 files in other folders)
